--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -1060,12 +1060,12 @@
     "def plot_train_vs_test_curves(X, Y, sample=20, max_deg=20):\n",
     "    N = len(X)\n",
     "    train_idx = np.random.choice(N, sample)\n",
-    "    Xtrain = X[train_idx]\n",
+    "    Xtrain = X[train_idx] # Take random samples from X\n",
     "    Ytrain = Y[train_idx]\n",
     "\n",
     "    test_idx = [idx for idx in xrange(N) if idx not in train_idx]\n",
     "    # test_idx = np.random.choice(N, sample)\n",
-    "    Xtest = X[test_idx]\n",
+    "    Xtest = X[test_idx] # Take rest samples from X for testing\n",
     "    Ytest = Y[test_idx]\n",
     "\n",
     "    mse_trains = []\n",
@@ -1133,7 +1133,8 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1264,64 +1265,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def make_poly(X, deg): # Make polynomial\n",
-    "    n = len(X)\n",
-    "    data = [np.ones(n)]\n",
-    "    for d in xrange(deg):\n",
-    "        data.append(X**(d+1))\n",
-    "    print data\n",
-    "    return np.vstack(data).T\n",
+    "### Categorical inputs\n",
+    "#### How to deal with things are not number\n",
+    "- Example: output = salary\n",
+    "- Inputs: gender, age, degree type, years of experience, GPA\n",
+    "\n",
+    "#### Solutions:\n",
+    "- One-hot encoding:\n",
+    "- Degree type = bachelors, masters, PhD\n",
+    "- Bachelors = [1, 0, 0]\n",
+    "- Masters = [0, 1, 0]\n",
+    "- PhD = [0, 0, 1]\n",
+    "\n",
+    "#### Specific example:\n",
+    "Let:\n",
+    "- y = salary\n",
+    "- x1 = 1 if female\n",
+    "- x2 = 1 if male\n",
+    "- y = 50000 - 5000x1 + 5000x2\n",
+    "\n",
+    "Predicted vales:\n",
+    "- E(y | female) = 45000\n",
+    "- E(y | male)   = 55000\n",
+    "\n",
+    "Another way:\n",
+    "\n",
+    "Let:\n",
+    "- y = salary\n",
+    "- x = 1 if male, 0 if female\n",
+    "- y = 45000 + 10000x\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X = np.array([1, 2, 3, 4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([ 1.,  1.,  1.,  1.]), array([1, 2, 3, 4]), array([ 1,  4,  9, 16]), array([ 1,  8, 27, 64])]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[  1.,   1.,   1.,   1.],\n",
-       "       [  1.,   2.,   4.,   8.],\n",
-       "       [  1.,   3.,   9.,  27.],\n",
-       "       [  1.,   4.,  16.,  64.]])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "make_poly(X, 3)"
    ]
   },
   {
